Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120694

QDockWidget resize issue with Qt 6.6.1

XMLWordPrintable

    • Windows
    • 89fc58127 (dev), 805322881 (6.7), e8b2047a9 (6.6), 31ce494f9 (tqtc/lts-6.5)

      User reported that from Qt 6.6.1 the resize cursor does not appear in the floating dock widgets.

      Qt Support tested with Qt 6.6.0 and there the resize was possible with the attached example project. When Qt 6.6.1 was used then the resize cursor did not appear.

      User had investigate that the function "setTitleBarWidget" has to be called, then the cursor is no longer displayed.

      Steps to reproduce:

      Run the example with Qt 6.6.1 or Qt 6.6.2 and try to resize the dock widget.

      User also attached example video.

        For Gerrit Dashboard: QTBUG-120694
        # Subject Branch Project Status CR V

            axelspoerl Axel Spoerl
            tero.pelkonen Tero Pelkonen
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes