src/widgets/widgets/qdockwidget.cpp
@@ -902,15 +902,15 @@ Qt::DockWidgetArea QDockWidgetPrivate::toDockWidgetArea(QInternal::DockPosition 
 
 void QDockWidgetPrivate::setResizerActive(bool active)
 {
-#ifdef Q_OS_WINDOWS
-    Q_UNUSED(active);
-#else
     Q_Q(QDockWidget);
+    const auto *dwLayout = qobject_cast<QDockWidgetLayout *>(layout);
+    if (dwLayout->nativeWindowDeco(q->isFloating()))
+        return;
+
     if (active && !resizer)
         resizer = new QWidgetResizeHandler(q);
     if (resizer)
         resizer->setEnabled(active);
-#endif
 }
 
 bool QDockWidgetPrivate::isAnimating() const
